fixed spacing issue with item boxes

--- a/styles/index.css
+++ b/styles/index.css
@@ -94,7 +94,8 @@ body {
 
 .body {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
+
 }
 
 .title {
